--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>springboot-swagger2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-swagger2</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
