--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,14 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Docker Publish
-      uses: manusa/actions-publish-docker@v1.0.1
+    - name: Checkout
+      uses: actions/checkout@v1
+    - run: commandToBuildYourProject.sh
+    - name: Dockerize
+      if: success()
+      uses: manusa/actions-publish-docker@master
+      with:
+        name: organization/image_name
+        username: ç
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }} 
 
