--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,14 +15,7 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Checkout
-      uses: actions/checkout@v1
-    - run: commandToBuildYourProject.sh
-    - name: Dockerize
-      if: success()
-      uses: manusa/actions-publish-docker@master
-      with:
-        name: organization/image_name
-        username: ${{ secrets.DOCKER_HUB_USER }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }} 
+    - name: Docker Push
+      uses: opspresso/action-docker@v0.2.1
+
 
