--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,15 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Docker Push
-      uses: opspresso/action-docker@v0.2.1
-
+    - name: Build & Push to AWS ECR
+      uses: opspresso/action-docker@master
+      with:
+        args: --ecr
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: "us-east-1"
+        # IMAGE_NAME: "user_id/image_name"
+        TAG_NAME: "v0.0.1"
+        LATEST: "true"
 
